--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dream Care</title>
-  <link rel="stylesheet" href="style.css"> <!-- optional -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>DreamPCCare</title>
+  <meta name="description" content="DreamPCCare — Welcome" />
+  <style>
+    :root{font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;}
+    body{margin:0;display:flex;min-height:100vh;align-items:center;justify-content:center;background:#f6f7fb;color:#111}
+    .card{max-width:880px;padding:28px;border-radius:12px;box-shadow:0 6px 24px rgba(22,28,45,0.08);background:#fff}
+    h1{margin:0 0 8px;font-size:clamp(20px,4vw,36px)}
+    p{margin:0 0 16px;color:#444}
+    a.btn{display:inline-block;padding:10px 14px;border-radius:8px;text-decoration:none;background:#0b63d6;color:#fff;font-weight:600}
+    footer{margin-top:20px;color:#666;font-size:13px}
+  </style>
 </head>
 <body>
-  <h1>Welcome to Dream Care</h1>
-  <p>This is my website hosted for free on GitHub Pages.</p>
+  <main class="card" role="main">
+    <h1>Welcome to DreamPCCare</h1>
+    <p>Your domain <strong>dreampccare.in</strong> is ready to go — this page is served from GitHub Pages.</p>
+    <p><a class="btn" href="mailto:hello@dreampccare.in">Contact</a></p>
+    <footer>Built with GitHub Pages • Edit files in your repository to update this page.</footer>
+  </main>
 </body>
 </html>
+
