--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-596-electric-xtra
                     <polygon points="20,8 32,16 32,24 20,32 8,24 8,16" fill="url(#logoGradient)" opacity="0.3"/>
                     <circle cx="20" cy="20" r="3" fill="url(#logoGradient)"/>
                 </svg>
-                <span class="logo-text">ELECTRIC XTRA</span>
+                <span class="logo-text">DREAM PC CARE</span>
             </a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#home" class="nav-link">Home</a></li>
