--- a/index.html
+++ b/index.html
@@ -234,21 +234,21 @@ https://templatemo.com/tm-596-electric-xtra
                     <div class="info-icon">📧</div>
                     <div class="info-details">
                         <h4>Email</h4>
-                        <p>contact@electricxtra.tech</p>
+                        <p>dreampccare@gmail.com</p>
                     </div>
                 </div>
                 <div class="info-item">
                     <div class="info-icon">📱</div>
                     <div class="info-details">
                         <h4>Phone</h4>
-                        <p>+1 (555) 123-4567</p>
+                        <p>+91 9600634188</p>
                     </div>
                 </div>
                 <div class="info-item">
                     <div class="info-icon">📍</div>
                     <div class="info-details">
                         <h4>Location</h4>
-                        <p>Neo Tokyo, Sector 7</p>
+                        <p>Athani,Gobi</p>
                     </div>
                 </div>
                 <div class="map-container">
