--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ https://templatemo.com/tm-596-electric-xtra
                 <div class="map-container">
                     <div class="map-placeholder">
                         <p>Interactive Map</p>
-                        <p style="font-size: 0.9rem; margin-top: 10px;">Neo Tokyo, Sector 7</p>
+                        <p style="font-size: 0.9rem; margin-top: 10px;">Athani,Gobi</p>
                     </div>
                     <div class="map-overlay"></div>
                 </div>
