--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ https://templatemo.com/tm-596-electric-xtra
                 <a href="#terms">Terms of Service</a>
                 <a href="#careers">Careers</a>
             </div>
-            <p class="copyright">© 2025 ELECTRIC XTRA. All rights reserved. Building tomorrow, today. | Design: <a href="https://templatemo.com" target="_blank" rel="nofollow noopener">TemplateMo</a></p>
+            <p class="copyright">DreamPcCare</a></p>
         </div>
     </footer>
 <script src="templatemo-electric-scripts.js"></script>
