--- a/index.html
+++ b/index.html
@@ -90,23 +90,23 @@ https://templatemo.com/tm-596-electric-xtra
         <h2 class="section-title">Core Features</h2>
         <div class="features-container">
             <div class="feature-tabs">
-                <div class="tab-item active" data-tab="performance">
+                <div class="tab-item active" data-tab="Customised Pc">
                     <span class="tab-icon">⚡</span>
                     <span>Performance</span>
                 </div>
-                <div class="tab-item" data-tab="security">
+                <div class="tab-item" data-tab="New Laptops">
                     <span class="tab-icon">🔒</span>
                     <span>Security</span>
                 </div>
-                <div class="tab-item" data-tab="network">
+                <div class="tab-item" data-tab="Demo Laptops">
                     <span class="tab-icon">🌐</span>
                     <span>Network</span>
                 </div>
-                <div class="tab-item" data-tab="analytics">
+                <div class="tab-item" data-tab="PC Spares">
                     <span class="tab-icon">📊</span>
                     <span>Analytics</span>
                 </div>
-                <div class="tab-item" data-tab="integration">
+                <div class="tab-item" data-tab="PC Repairs">
                     <span class="tab-icon">🔧</span>
                     <span>Integration</span>
                 </div>
