--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@ https://templatemo.com/tm-596-electric-xtra
             <div class="feature-tabs">
                 <div class="tab-item active" data-tab="performance">
                     <span class="tab-icon">⚡</span>
-                    <span>Performance</span>
+                    <span>Custom PC</span>
                 </div>
                 <div class="tab-item" data-tab="security">
                     <span class="tab-icon">🔒</span>
-                    <span>Security</span>
+                    <span>New Laptops</span>
                 </div>
                 <div class="tab-item" data-tab="network">
                     <span class="tab-icon">🌐</span>
-                    <span>Network</span>
+                    <span>Demo Laptops</span>
                 </div>
                 <div class="tab-item" data-tab="analytics">
                     <span class="tab-icon">📊</span>
-                    <span>Analytics</span>
+                    <span>PC Spares</span>
                 </div>
                 <div class="tab-item" data-tab="integration">
                     <span class="tab-icon">🔧</span>
-                    <span>Integration</span>
+                    <span>Repais</span>
                 </div>
             </div>
             <div class="feature-content">
