--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ https://templatemo.com/tm-596-electric-xtra
                 </div>
                 <div class="tab-item" data-tab="integration">
                     <span class="tab-icon">🔧</span>
-                    <span>Repais</span>
+                    <span>Repairs</span>
                 </div>
             </div>
             <div class="feature-content">
