--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@ https://templatemo.com/tm-596-electric-xtra
             <div class="feature-content">
                 <div class="content-panel active" id="performance">
                     <h3>Lightning Fast Performance</h3>
-                    <p>Experience unprecedented speed with our quantum-powered infrastructure. Built on cutting-edge technology that delivers results at the speed of thought. Electric Xtra CSS template is brought to you by TemplateMo website.</p>
+                    <p>At Dream PC Care, we specialize in building high-performance custom PCs tailored to your exact needs. Whether you’re a gamer, creator, designer, or professional, our custom-built systems deliver unmatched speed, reliability, and power.</p>
                     <ul class="feature-list">
-                        <li>Sub-millisecond response times</li>
-                        <li>99.99% uptime guarantee</li>
-                        <li>Automatic scaling based on demand</li>
-                        <li>Real-time data synchronization</li>
+                        <li>🎮 Gaming PCs – Built for smooth gameplay, high FPS, and immersive graphics.</li>
+                        <li>🎨 Workstation PCs – Perfect for video editing, 3D modeling, graphic design & content creation.</li>
+                        <li>🏢 Business PCs – Reliable systems designed for productivity, efficiency, and multitasking.</li>
+                        <li>⚡ Performance Tuning – Overclocking, liquid cooling, and advanced hardware setups.</li>
                     </ul>
                 </div>
                 <div class="content-panel" id="security">
