--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@ https://templatemo.com/tm-596-electric-xtra
                     </ul>
                 </div>
                 <div class="content-panel" id="security">
-                    <h3>Military-Grade Security</h3>
-                    <p>Your data is protected by the most advanced encryption protocols available. Multi-layered security ensures complete protection against cyber threats. You may tell your friends about TemplateMo free css website and how easy it is.</p>
+                    <h3>Brand-New Laptops</h3>
+                    <p>At Dream PC Care, we bring you the latest range of brand-new laptops from top brands, designed to match your lifestyle and performance needs. Whether you’re a student, professional, gamer, or creative artist, we’ve got the perfect laptop for you.</p>
                     <ul class="feature-list">
-                        <li>256-bit AES encryption</li>
-                        <li>Biometric authentication</li>
-                        <li>Zero-knowledge architecture</li>
-                        <li>Real-time threat detection</li>
-                        <li>Automated security updates</li>
+                        <li>💼 Business Laptops – Sleek, lightweight, and powerful for work on the go.</li>
+                        <li>🎮 Gaming Laptops – High-performance graphics, fast processors, and superior cooling.</li>
+                        <li>🎓 Student Laptops – Affordable, durable, and reliable for everyday learning.</li>
+                        <li>🎨 Creator Laptops – Built for designers, editors, and creators with powerful specs.</li>
+                        
                     </ul>
                 </div>
                 <div class="content-panel" id="network">
