--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@ https://templatemo.com/tm-596-electric-xtra
                     <span>Custom PC</span>
                 </div>
                 <div class="tab-item" data-tab="security">
-                    <span class="tab-icon">🔒</span>
+                    <span class="tab-icon">💻</span>
                     <span>New Laptops</span>
                 </div>
                 <div class="tab-item" data-tab="network">
-                    <span class="tab-icon">🌐</span>
+                    <span class="tab-icon">♻️</span>
                     <span>Demo Laptops</span>
                 </div>
                 <div class="tab-item" data-tab="analytics">
-                    <span class="tab-icon">📊</span>
+                    <span class="tab-icon">⚙️</span>
                     <span>PC Spares</span>
                 </div>
                 <div class="tab-item" data-tab="integration">
@@ -133,37 +133,37 @@ https://templatemo.com/tm-596-electric-xtra
                         
                     </ul>
                 </div>
-                <div class="content-panel" id="network">
-                    <h3>Global Neural Network</h3>
-                    <p>Connect to our worldwide infrastructure that spans across continents. Seamless integration with existing systems and future-proof architecture.</p>
+                <div class="Demo Laptops" id="network">
+                    <h3>Demo & Refurbished Laptops</h3>
+                    <p>Looking for a budget-friendly laptop without compromising on performance? At Dream PC Care, we offer demo and refurbished laptops that are fully tested, certified, and ready to use.</p>
                     <ul class="feature-list">
-                        <li>200+ global data centers</li>
-                        <li>Intelligent routing algorithms</li>
-                        <li>Cross-platform compatibility</li>
-                        <li>5G and satellite connectivity</li>
-                        <li>Decentralized architecture</li>
+                        <li>💻 Demo Laptops – Lightly used display models, almost like new, at unbeatable prices.</li>
+                        <li>🔧 Refurbished Laptops – Professionally restored and upgraded for smooth performance.</li>
+                        <li>🎓 Affordable Choice – Perfect for students, office work, and everyday use.</li>
+                        <li>♻️ Eco-Friendly Option – Save money and reduce e-waste with refurbished tech.</li>
+                       
                     </ul>
                 </div>
                 <div class="content-panel" id="analytics">
-                    <h3>Advanced Analytics</h3>
-                    <p>Harness the power of AI-driven insights to make data-driven decisions. Real-time analytics and predictive modeling at your fingertips.</p>
+                    <h3>PC Spares & Accessories</h3>
+                    <p>At Dream PC Care, we provide a wide range of genuine PC spares and components to keep your system running smoothly or to upgrade for better performance. Whether you’re repairing, building, or customizing, we’ve got the right parts for you.</p>
                     <ul class="feature-list">
-                        <li>Machine learning algorithms</li>
-                        <li>Predictive analytics</li>
-                        <li>Custom dashboard creation</li>
-                        <li>Real-time data visualization</li>
-                        <li>Automated reporting</li>
+                        <li>⚡ Processors (CPU) – Intel & AMD options for every need</li>
+                        <li>🎮 Graphics Cards (GPU) – From entry-level to high-end gaming & design cards</li>
+                        <li>💾 Storage Solutions – SSDs, HDDs, and NVMe for speed & capacity</li>
+                        <li>🖥️ Motherboards – Compatible boards for gaming, workstations, and everyday PCs</li>
+                        <li>🎧 Accessories – Keyboards, mice, headsets, cables & more</li>
                     </ul>
                 </div>
                 <div class="content-panel" id="integration">
-                    <h3>Seamless Integration</h3>
-                    <p>Connect with thousands of apps and services through our universal API. Built to work with your existing tools and workflows.</p>
+                    <h3>PC & Laptop Repair Services</h3>
+                    <p>At Dream PC Care, we provide fast, reliable, and affordable repair services for all types of desktops and laptops. From minor fixes to major hardware replacements, our expert technicians ensure your device is restored to peak performance.</p>
                     <ul class="feature-list">
-                        <li>RESTful API architecture</li>
-                        <li>WebSocket support</li>
-                        <li>SDK for major platforms</li>
-                        <li>One-click integrations</li>
-                        <li>Custom webhook support</li>
+                        <li>🔧 Hardware Repairs – Motherboard, CPU, GPU, RAM, SMPS, and more</li>
+                        <li>💻 Laptop Services – Screen replacement, keyboard issues, battery, hinges & charging port</li>
+                        <li>⚡ Software Solutions – OS installation, virus removal, data recovery & optimization</li>
+                        <li>❄️ Performance Upgrades – SSD installation, RAM expansion, cooling solutions</li>
+                        <li>🧹 Cleaning & Maintenance – Dust removal, thermal paste replacement & tune-ups</li>
                     </ul>
                 </div>
             </div>
