--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ https://templatemo.com/tm-596-electric-xtra
                         <li>🎨 Creator Laptops – Built for designers, editors, and creators with powerful specs.</li>                        
                     </ul>
                 </div>
-                <div class="Demo Laptops" id="network">
+                <div class="content-panel" id="network">
                     <h3>Demo & Refurbished Laptops</h3>
                     <p>Looking for a budget-friendly laptop without compromising on performance? At Dream PC Care, we offer demo and refurbished laptops that are fully tested, certified, and ready to use.</p>
                     <ul class="feature-list">
@@ -170,7 +170,7 @@ https://templatemo.com/tm-596-electric-xtra
 
     <!-- About Section -->
     <section class="about" id="about">
-        <h2 class="section-title">About Electric Xtra</h2>
+        <h2 class="section-title">About Dream Pc Care</h2>
         <div class="about-content">
             <div class="about-text">
                 <h2>Pioneering the Digital Frontier</h2>
