--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@ https://templatemo.com/tm-596-electric-xtra
         <h2 class="section-title">About Dream Pc Care</h2>
         <div class="about-content">
             <div class="about-text">
-                <h2>Pioneering the Digital Frontier</h2>
-                <p>At ELECTRIC XTRA, we're not just building technology – we're crafting the future. Our mission is to bridge the gap between human potential and digital innovation, creating solutions that empower individuals and transform industries.</p>
-                <p>Founded by visionaries who saw beyond the limitations of current technology, ELECTRIC XTRA represents a quantum leap in digital infrastructure. We combine cutting-edge research with practical applications to deliver solutions that are both revolutionary and reliable.</p>
+                <h2>Provide reliable, affordable, and high-performance tech solutions tailored to your needs.</h2>
+                <p>At Dream PC Care, we believe every customer deserves the best technology solutions at the best value. We specialize in custom-built PCs, brand-new laptops, demo & refurbished laptops, PC spares, and repair services – all under one roof.</p>
+                <p>Founded by visionaries who saw beyond the limitations of current technology, DreamPcCare represents a quantum leap in digital infrastructure. We combine cutting-edge research with practical applications to deliver solutions that are both revolutionary and reliable.</p>
                 <p>Join us as we redefine what's possible in the digital age. The future isn't something that happens to us – it's something we create together.</p>
             </div>
             <div class="about-visual">
@@ -196,7 +196,7 @@ https://templatemo.com/tm-596-electric-xtra
                 <h2>Innovation at Every Level</h2>
                 <p>Our commitment to excellence drives us to push boundaries and challenge conventions. With a team of world-class engineers, designers, and visionaries, we're creating solutions that not only meet today's needs but anticipate tomorrow's challenges.</p>
                 <p>From quantum computing to neural networks, from blockchain to AI, we're at the forefront of every technological revolution. Our integrated approach ensures that each innovation builds upon the last, creating a synergy that amplifies our impact.</p>
-                <p>Experience the power of true digital transformation. With ELECTRIC XTRA, you're not just adopting technology – you're embracing a philosophy of continuous evolution and limitless possibility.</p>
+                <p>Experience the power of true digital transformation. With DreamPcCare, you're not just adopting technology – you're embracing a philosophy of continuous evolution and limitless possibility.</p>
             </div>
         </div>
     </section>
