--- a/index.html
+++ b/index.html
@@ -15,6 +15,32 @@ https://templatemo.com/tm-596-electric-xtra
 -->
 </head>
 <body>
+<!-- WhatsApp Floating Button -->
+<a href="https://wa.me/919600634188" target="_blank" id="whatsapp-btn">
+  <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg" alt="WhatsApp">
+</a>
+
+<style>
+  #whatsapp-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+  }
+  #whatsapp-btn img {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    background: #25D366;
+    padding: 10px;
+    box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
+    transition: transform 0.2s;
+  }
+  #whatsapp-btn img:hover {
+    transform: scale(1.1);
+  }
+</style>
+
     <!-- Animated Grid Background -->
     <div class="grid-bg"></div>
     <div class="gradient-overlay"></div>
