--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ https://templatemo.com/tm-596-electric-xtra
 -->
 </head>
 <body>
+
 <!-- WhatsApp Floating Button -->
 <a href="https://wa.me/919600634188" target="_blank" id="whatsapp-btn">
   <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg" alt="WhatsApp">
@@ -100,7 +101,7 @@ https://templatemo.com/tm-596-electric-xtra
                     <p class="subtitle">Where technology meets infinite possibilities</p>
                 </div>
                 <div class="text-set">
-                    <h1 class="glitch-text" data-text="ELECTRIC DREAMS">ELECTRIC DREAMS</h1>
+                    <h1 class="glitch-text" data-text="ELECTRIC DREAMS">COMPUTER DREAMS</h1>
                     <p class="subtitle">Powering tomorrow's digital revolution today</p>
                 </div>
             </div>
