--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@ https://templatemo.com/tm-596-electric-xtra
   #whatsapp-btn img:hover {
     transform: scale(1.1);
   }
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-99QNY86KJ5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-99QNY86KJ5');
+</script>
+
 </style>
 
     <!-- Animated Grid Background -->
